<resources>
    <string name="app_name">4team_phr</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="signup">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="hello">Hello,</string>
    <string name="placeholder">Placeholder</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="cnp">CNP</string>
    <string name="time_12_00">Time: 12:00</string>
    <string name="date_01_jan_00">Date: 01 - Jan - 00</string>
    <string name="specialization">Specialization</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="appointment_button">Appointment Button</string>
    <string name="patient_list">Patient List</string>
    <string name="patient_list_button">Patient List Button</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_cnp">Patient CNP</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>